# LitVault

./: .gitignore  README.md  STATUS.md  config.example.json  config.json  start.bat
backend/: alembic.ini  pyproject.toml  requirements.txt  start.bat
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fts5_and_missing_columns.py  003_search_indexes.py  004_fts_file_path_rebuild.py
backend/app/: config.py  database.py  deps.py  main.py  migrations.py
backend/app/classification/: filename_extractor.py  ollama_client.py  schemas.py  service.py
backend/app/documents/: actions_router.py  files_router.py  models.py  router.py  service.py
backend/app/ingest/: crawler.py  glm_ocr_client.py  service.py  thumbnail.py
backend/app/jobs/: models.py  router.py  watcher.py  worker.py
backend/app/search/: embedding_service.py  facet_cache.py  (+5 more)
backend/scripts/: benchmark_llm.py  benchmark_parse.py
backend/tests/: conftest.py  fake_embeddings.py  test_classification_split.py  test_classification_tiers.py  test_crawler_progress.py  test_db_path_settings.py  test_documents_api.py  test_embed_job.py  test_embedding_service.py  test_facet_cache.py  test_filename_extractor.py  test_glm_ocr_client.py  test_ingest_parallel.py  test_migration_chain.py  test_ollama_client_retry.py  test_ollama_fence_strip.py  test_pdf_ocr_fallback.py  test_sanitizer.py  test_search_api_semantic.py  test_search_service.py  test_semantic_search.py  test_settings_api.py  test_similar_api.py  test_vector_index.py  test_watcher_manager.py  test_worker_live_settings.py
(+135 files in other folders)
