[project]
name = "litvault"
version = "0.1.0"
description = "Local literature navigator for engineering documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "pydantic-settings",
    "pymupdf4llm",
    "python-docx",
    "python-pptx",
    "langdetect",
    "sentence-transformers",
    "einops",
    "ollama",
    "watchfiles",
    "openpyxl",
    "pymupdf-layout>=1.27.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
